comment to direct compare accuracy with nn

--- a/src/Logistic_Regression.ipynb
+++ b/src/Logistic_Regression.ipynb
@@ -354,13 +354,14 @@
    "id": "5969b458",
    "metadata": {},
    "source": [
-    "# Accuracy"
+    "# Accuracy\n",
+    "Average accuracy for our multinomial linear regression is about 0.95, vs the neural network, which achieved an accuracy of 0.98 in the training pipeline."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "e639254e",
+   "execution_count": 8,
+   "id": "3deddcdd",
    "metadata": {},
    "outputs": [
     {
