--- a/src/Training_pipeline.ipynb
+++ b/src/Training_pipeline.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "id": "3efca39f",
    "metadata": {
     "scrolled": false
@@ -254,41 +254,35 @@
       "[23] Pituitary   \t 283 samples\n",
       "[24] Ovary       \t 180 samples\n",
       "[25] Liver       \t 226 samples\n",
-      "2022-07-23 18:40:37.077054: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2022-07-28 20:11:30.677462: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2022-07-23 18:40:37.099605: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2022-07-28 20:11:30.742412: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2022-07-23 18:40:37.100178: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2022-07-28 20:11:30.743090: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2022-07-23 18:40:37.100513: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F FMA\n",
+      "2022-07-28 20:11:30.744752: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-07-23 18:40:37.101316: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2022-07-28 20:11:30.745873: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2022-07-23 18:40:37.101924: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2022-07-28 20:11:30.746489: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2022-07-23 18:40:37.102405: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2022-07-28 20:11:30.746951: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2022-07-23 18:40:37.548119: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2022-07-28 20:11:31.330933: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2022-07-23 18:40:37.548649: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2022-07-28 20:11:31.331776: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2022-07-23 18:40:37.548682: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1594] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
-      "2022-07-23 18:40:37.549038: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2022-07-28 20:11:31.331807: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1594] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
+      "2022-07-28 20:11:31.332471: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:923] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2022-07-23 18:40:37.549148: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1510] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 1612 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3050 Ti Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.6\n",
+      "2022-07-28 20:11:31.332731: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1510] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 1612 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3050 Ti Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.6\n",
       "\n",
       "Total remaining samples after subsampling= 2600\n",
       "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input (Dense)                (None, 1000)              18964000  \n",
-      "_________________________________________________________________\n",
-      "1_decoder_batch_norm (BatchN (None, 1000)              4000      \n",
-      "_________________________________________________________________\n",
-      "1_activation (Activation)    (None, 1000)              0         \n",
-      "_________________________________________________________________\n",
-      "1_hidden_dropout (Dropout)   (None, 1000)              0         \n",
+      "Input_BAD (BADBlock)         (None, 1000)              18968000  \n",
       "_________________________________________________________________\n",
       "output (Dense)               (None, 26)                26026     \n",
       "=================================================================\n",
@@ -296,74 +290,62 @@
       "Trainable params: 18,992,026\n",
       "Non-trainable params: 2,000\n",
       "_________________________________________________________________\n",
-      "2022-07-23 18:40:43.876978: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:185] None of the MLIR Optimization Passes are enabled (registered 2)\n",
-      "2022-07-23 18:40:46.015827: I tensorflow/stream_executor/cuda/cuda_blas.cc:1760] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
+      "2022-07-28 20:11:36.339554: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:185] None of the MLIR Optimization Passes are enabled (registered 2)\n",
+      "2022-07-28 20:11:38.489316: I tensorflow/stream_executor/cuda/cuda_blas.cc:1760] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
       "\n",
-      "Epoch 00001: val_loss improved from inf to 2.03856, saving model to data/model/gtex\n",
-      "2022-07-23 18:40:47.802589: W tensorflow/python/util/util.cc:348] Sets are not currently considered sequences, but this may change in the future, so consider avoiding using them.\n",
+      "Epoch 00001: val_loss improved from inf to 1.84363, saving model to data/model/gtex\n",
+      "2022-07-28 20:11:40.277034: W tensorflow/python/util/util.cc:348] Sets are not currently considered sequences, but this may change in the future, so consider avoiding using them.\n",
       "\n",
-      "Epoch 00002: val_loss improved from 2.03856 to 1.14686, saving model to data/model/gtex\n",
+      "Epoch 00002: val_loss improved from 1.84363 to 1.05816, saving model to data/model/gtex\n",
       "\n",
-      "Epoch 00003: val_loss improved from 1.14686 to 0.72575, saving model to data/model/gtex\n",
+      "Epoch 00003: val_loss improved from 1.05816 to 0.87875, saving model to data/model/gtex\n",
       "\n",
-      "Epoch 00004: val_loss improved from 0.72575 to 0.36211, saving model to data/model/gtex\n",
+      "Epoch 00004: val_loss improved from 0.87875 to 0.45712, saving model to data/model/gtex\n",
       "\n",
-      "Epoch 00005: val_loss improved from 0.36211 to 0.29317, saving model to data/model/gtex\n",
+      "Epoch 00005: val_loss did not improve from 0.45712\n",
       "\n",
-      "Epoch 00006: val_loss did not improve from 0.29317\n",
+      "Epoch 00006: val_loss improved from 0.45712 to 0.39204, saving model to data/model/gtex\n",
       "\n",
-      "Epoch 00007: val_loss improved from 0.29317 to 0.12726, saving model to data/model/gtex\n",
+      "Epoch 00007: val_loss improved from 0.39204 to 0.37438, saving model to data/model/gtex\n",
       "\n",
-      "Epoch 00008: val_loss improved from 0.12726 to 0.10687, saving model to data/model/gtex\n",
+      "Epoch 00008: val_loss did not improve from 0.37438\n",
       "\n",
-      "Epoch 00009: val_loss did not improve from 0.10687\n",
+      "Epoch 00009: val_loss improved from 0.37438 to 0.12470, saving model to data/model/gtex\n",
       "\n",
-      "Epoch 00010: val_loss did not improve from 0.10687\n",
+      "Epoch 00010: val_loss did not improve from 0.12470\n",
       "\n",
-      "Epoch 00011: val_loss did not improve from 0.10687\n",
+      "Epoch 00011: val_loss improved from 0.12470 to 0.10426, saving model to data/model/gtex\n",
       "\n",
-      "Epoch 00012: val_loss improved from 0.10687 to 0.05969, saving model to data/model/gtex\n",
+      "Epoch 00012: val_loss improved from 0.10426 to 0.09362, saving model to data/model/gtex\n",
       "\n",
-      "Epoch 00013: val_loss improved from 0.05969 to 0.05737, saving model to data/model/gtex\n",
+      "Epoch 00013: val_loss improved from 0.09362 to 0.07964, saving model to data/model/gtex\n",
       "\n",
-      "Epoch 00014: val_loss did not improve from 0.05737\n",
+      "Epoch 00014: val_loss did not improve from 0.07964\n",
       "\n",
-      "Epoch 00015: val_loss did not improve from 0.05737\n",
+      "Epoch 00015: val_loss improved from 0.07964 to 0.05543, saving model to data/model/gtex\n",
       "\n",
-      "Epoch 00016: val_loss did not improve from 0.05737\n",
+      "Epoch 00016: val_loss did not improve from 0.05543\n",
       "\n",
-      "Epoch 00017: val_loss improved from 0.05737 to 0.05674, saving model to data/model/gtex\n",
+      "Epoch 00017: val_loss did not improve from 0.05543\n",
       "\n",
-      "Epoch 00018: val_loss improved from 0.05674 to 0.05661, saving model to data/model/gtex\n",
+      "Epoch 00018: val_loss did not improve from 0.05543\n",
       "\n",
-      "Epoch 00019: val_loss improved from 0.05661 to 0.05589, saving model to data/model/gtex\n",
-      "\n",
-      "Epoch 00020: val_loss improved from 0.05589 to 0.05556, saving model to data/model/gtex\n",
-      "\n",
-      "Epoch 00021: val_loss improved from 0.05556 to 0.05548, saving model to data/model/gtex\n",
-      "\n",
-      "Epoch 00022: val_loss did not improve from 0.05548\n",
-      "\n",
-      "Epoch 00023: val_loss did not improve from 0.05548\n",
-      "\n",
-      "Epoch 00024: val_loss did not improve from 0.05548\n",
-      "\n",
-      "Epoch 00025: val_loss did not improve from 0.05548\n",
-      "8/8 [==============================] - 0s 10ms/step - loss: 0.0773 - accuracy: 0.9805 - mse: 0.0011 - precision: 0.9805 - recall: 0.9805 - auc: 0.9989 - SpecificityAtSensitivity: 0.9998 - SensitivityAtSpecificity: 0.9961 - fp: 5.0000 - fn: 5.0000 - tp: 251.0000 - tn: 6395.0000   \n",
+      "Epoch 00019: val_loss did not improve from 0.05543\n",
+      "8/8 [==============================] - 0s 11ms/step - loss: 0.0780 - accuracy: 0.9844 - mse: 9.6178e-04 - precision: 0.9844 - recall: 0.9844 - auc: 0.9989 - SpecificityAtSensitivity: 0.9998 - SensitivityAtSpecificity: 0.9961 - fp: 4.0000 - fn: 4.0000 - tp: 252.0000 - tn: 6396.0000\n",
       "Performance: \n",
       "Performance details: \n",
-      "loss:\t0.07725408673286438\n",
-      "accuracy:\t0.98046875\n",
-      "mse:\t0.0011163769522681832\n",
-      "precision:\t0.98046875\n",
-      "recall:\t0.98046875\n",
-      "auc:\t0.9988896250724792\n",
+      "loss:\t0.07804308831691742\n",
+      "accuracy:\t0.984375\n",
+      "mse:\t0.0009617832256481051\n",
+      "precision:\t0.984375\n",
+      "recall:\t0.984375\n",
+      "auc:\t0.9988833665847778\n",
       "SpecificityAtSensitivity:\t0.9998437762260437\n",
       "SensitivityAtSpecificity:\t0.99609375\n",
-      "fp:\t5.0\n",
-      "fn:\t5.0\n",
-      "tp:\t251.0\n",
-      "tn:\t6395.0\n",
+      "fp:\t4.0\n",
+      "fn:\t4.0\n",
+      "tp:\t252.0\n",
+      "tn:\t6396.0\n",
       "Figure(500x500)\n",
       "Number of training samples: 2080\n",
       "Number of validation samples: 256\n",
@@ -371,19 +353,13 @@
       "Number of test samples: 256\n",
       "Mis-classifications:\n",
       "(<truth>,<false-prediction>)\n",
-      "[('Esophagus', 'Blood Vessel'), ('Blood Vessel', 'Heart'), ('Vagina', 'Uterus'), ('Adipose Tissue', 'Breast'), ('Salivary Gland', 'Esophagus')]\n",
-      "Model successfully saved at: data/model/gtex/manual/gtex_model.h5.\n",
+      "[('Esophagus', 'Blood Vessel'), ('Blood Vessel', 'Heart'), ('Adipose Tissue', 'Breast'), ('Salivary Gland', 'Esophagus')]\n",
+      "[sbr.model.save_architecture] Model successfully saved at: data/model/gtex/manual/gtex_model.h5.\n",
       "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input (Dense)                (None, 1000)              18964000  \n",
-      "_________________________________________________________________\n",
-      "1_decoder_batch_norm (BatchN (None, 1000)              4000      \n",
-      "_________________________________________________________________\n",
-      "1_activation (Activation)    (None, 1000)              0         \n",
-      "_________________________________________________________________\n",
-      "1_hidden_dropout (Dropout)   (None, 1000)              0         \n",
+      "Input_BAD (BADBlock)         (None, 1000)              18968000  \n",
       "_________________________________________________________________\n",
       "output (Dense)               (None, 26)                26026     \n",
       "=================================================================\n",
